html criado, faltando o footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <title>Facebook Clone</title>
 </head>
 <body>
-    <h1>A fazer :)</h1>
+    <div>
+        <div>
+            <h2>Facebook</h2>
+            <p>O Facebook ajuda você a se conectar e compartilhar com as pessoas que fazem parte da sua vida.</p>
+        </div>
+        <div>
+            <div>
+                <div>
+                    <input type="email" placeholder="Email">
+                    <input type="password" placeholder="Senha">
+                </div>
+                <div>
+                    <button>Entrar</button>
+                    <a href="/">Esqueceu a senha?</a>
+                </div>
+                <div>
+                    <button>Criar nova conta</button>
+                </div>
+            </div>
+            <p><a href="/">Criar uma página</a> para uma celebridade, banda ou empresa.</p>
+        </div>
+    </div>
+    <footer>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+        <div>
+            
+        </div>
+    </footer>
 </body>
 </html>
