finalizado a contentDiv, faltando o Footer ainda

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <h2 id="faceTitle">facebook</h2>
             <p id="faceParagraph">O Facebook ajuda você a se conectar e <br/>compartilhar com as pessoas que<br/> fazem parte da sua vida.</p>
         </div>
-        <div>
+        <div id="loginDiv">
             <div id="mainContainer">
                 <div id="inputContainer">
-                    <input class="box input" type="email" placeholder="Email">
+                    <input class="box input" type="email" placeholder="Email ou Telefone">
                     <input class="box input" type="password" placeholder="Senha">
                 </div>
                 <div id="buttonContainer">
