--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Clone</title>
+    <!--CSS-->
     <link rel="StyleSheet" href="css/normalize.css" >
     <link rel="StyleSheet" href="css/style.css" >
-    <link rel="StyleSheet" href="css/fonts.css" >
 </head>
 <body>
     <div id="contentDiv">
@@ -18,7 +18,7 @@
         <div id="loginDiv">
             <div id="mainContainer">
                 <div id="inputContainer">
-                    <input class="box input" type="email" placeholder="Email ou Telefone">
+                    <input class="box input" onfocus="" type="email" placeholder="Email ou Telefone">
                     <input class="box input" type="password" placeholder="Senha">
                 </div>
                 <div id="buttonContainer">
@@ -32,17 +32,5 @@
             <p id="paragraph"><a class="link createPage" href="/">Criar uma página</a> para uma celebridade, banda ou empresa.</p>
         </div>
     </div>
-    
-    <footer>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-            
-        </div>
-    </footer>
 </body>
 </html>
