--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--CSS-->
     <link rel="StyleSheet" href="css/normalize.css" >
     <link rel="StyleSheet" href="css/style.css" >
+    <link rel="StyleSheet" href="css/responsive.css">
 </head>
 <body>
     <div id="contentDiv">
